# kafka_synchroniser

./: .env.sample  Cargo.toml  docker-compose.yml  todo.md
src/: main.rs
src/core/: mod.rs
src/core/exemple/: listener_ex.rs  mod.rs
src/core/queue/: can_consume.rs  can_produce.rs  datas.rs  listener.rs  mod.rs  queue_synchronizer.rs
src/core/queue/sync/: can_get_correlation_id.rs  listener_synchronizer.rs  mod.rs  queue_synchronizer.rs  subscriber.rs
src/core/queue/sync/read_write/: can_compute_command.rs  listener_read_write.rs  mod.rs
src/infra/: mod.rs
src/infra/exemple_component/: mod.rs
src/infra/kafka/: consumer.rs  producer.rs
