[package]
name = "kafka_synchroniser"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
env_logger = "0.11.5"
rand = "0.8.5"
futures = "0.3.30"
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread", "macros"] }
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
serde_json = "1.0.133"
uuid = { version = "1.11.0", features = ["v4"] }
dotenv = "0.15.0"